# rfidProject_V2_S2

./: .cproject  .project  CMakeLists.txt  Makefile  README.md  docs.doxyfile  docs.doxyfile.bak  partitions_example.csv  sdkconfig  sdkconfig.defaults  sdkconfig.old
components/Classes/Application/DataProcessing/: CMakeLists.txt  DataProcessing.cpp  DataProcessing.h
docs/: docs.doxyfile  index.html  mainpage.cpp
html/: DataProcessing_8cpp.html  DataProcessing_8h.html  DataProcessing_8h_source.html  DeviceModel_8cpp.html  DeviceModel_8h.html  DeviceModel_8h_source.html  Device_8cpp.html  Device_8h.html  Device_8h_source.html  EmployeeModel_8cpp.html  EmployeeModel_8h.html  EmployeeModel_8h_source.html  Employee_8cpp.html  Employee_8h.html  Employee_8h_source.html  MainApplication_8cpp.html  MainApplication_8h.html  MainApplication_8h_source.html  MessagingService_8cpp.html  MessagingService_8h.html  MessagingService_8h_source.html  MqttService_8cpp.html  MqttService_8h.html  MqttService_8h_source.html  README_8md.html  RfidScanner_8cpp.html  RfidScanner_8h.html  RfidScanner_8h_source.html  RfidTag_8cpp.html  RfidTag_8h.html  RfidTag_8h_source.html  SntpTime_8cpp.html  SntpTime_8h.html  SntpTime_8h_source.html  TagProcessing_8cpp.html  TagProcessing_8h.html  TagProcessing_8h_source.html  Wifi_8cpp.html  Wifi_8h.html  Wifi_8h_source.html  (+104 more)
latex/: DataProcessing_8cpp.tex  DataProcessing_8h.tex  DeviceModel_8cpp.tex  DeviceModel_8h.tex  Device_8cpp.tex  Device_8h.tex  EmployeeModel_8cpp.tex  EmployeeModel_8h.tex  Employee_8cpp.tex  Employee_8h.tex  MainApplication_8cpp.tex  (+85 more)
(+668 files in other folders)
